--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,450 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Jura&family=Open+Sans&family=Ubuntu&display=swap');
+
+
+/* global */
+*{
+  box-sizing: border-box;
+}
+
+:root{
+  --heading:#02203c;
+  --btn-bg:#626ee3;
+  --text:#445d6e;
+  --divider:#eee;
+  --tick-bg:rgba(58,179,87,.1);
+  --cross-bg:rgba(255,0,0,.1);
+  --category-card-bg:#15314b;
+  --white:#fff;
+  --logo-text:#8d96eb;
+  --body-bg: #f6f9fc;
+
+}
+body{
+  background-color:var(--body-bg);
+}
+
+
+h1,h2,h3{
+    font-family: "Ubuntu","Helvetica","Arial",sans-serif;
+    color: #02203c;
+    font-weight: 400;
+    line-height: 1.3;
+}
+span{
+  font-size:14px;
+  font-family: "Open Sans","Helvetica","Arial",sans-serif;
+
+}
+
+.flex{
+  display: flex;
+}
+.flex-col{
+  flex-direction: column;
+}
+.justify-content{
+  justify-content: space-between;
+}
+.justify-content-center{
+  justify-content:center;
+}
+.align-items{
+  align-items: center;
+}
+
+.pointer{
+  cursor:pointer;
+}
+.white-text{
+  color:var(--white);
+}
+.center{
+  text-align:center;
+}
+
+
+
+
+
+/* global */
+
+
+
+
+
+
+
+/* custom global */
+
+.divider{
+  background-color: rgb(2, 32, 60); width: 87%; height: 1px; margin: 0px auto;
+}
+
+.heading-text-h2{
+  font-size:35px;
+}
+.heading-text-h4{
+  font-size:14px;
+}
+.head-subtext-p{
+  font-size:16px;
+  font-family: "Open Sans","Helvetica","Arial",sans-serif;
+  color:var(--text);
+  line-height:1.7;
+  margin-bottom:15px;
+
+}
+.analysis-svg{
+  margin: 40px auto;
+  color: #02203c;
+  max-width: 350px;
+  width: 40%;
+  
+}
+.rightarrow{
+  width: 20px;
+    color: #fff;
+    margin: 0 0 0 15px;
+}
+
+.uparrow{
+  font-size:40px;
+  font-weight:300;
+  right: 100px;
+  position:absolute;
+  z-index: 6;
+
+}
+.uparrow:hover{
+  transform:scale(1.2,1.2);
+  transition: .2s linear;
+}
+.login-btn{
+
+}
+
+.btn{
+  font-size:14px;
+  font-family: "Open Sans","Helvetica","Arial",sans-serif;
+  outline: none;
+  border: none;
+  border-radius:4px;
+}
+
+.btn-primary{
+  background-color:var(--btn-bg);
+  color:var(--white);
+  padding:16px 40px;
+  font-size:16px;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 50%);
+  
+}
+.btn-secondary{
+  background-color: transparent;
+  border: 2px solid rgb(2, 32, 60);
+  position: relative;
+  margin: 0 auto;
+  padding: 5px 0px;
+
   text-align: center;
+  cursor: pointer;
+  display: inline-flex;
+  border: 2px solid #02203c;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: space-around;
+  overflow: hidden;
+  width: 190px;
+  background-color: transparent;
+  font-size: 16px;
+
+}
+.btn-ternary{
+    background-color:var(--white);
+    box-shadow: 0 2px 4px rgb(50 50 93 / 10%);
+    border: none;
+    border-radius: 4px;
+    padding: 12px 35px;
+    color: #445d6e;
+    transition: box-shadow .2s,transform .2s;
+    font-size: 16px;
+}
+.btn-testimonial{
+  font-family: "Open Sans","Helvetica","Arial",sans-serif;
+  margin:50px 0px;
+}
+.btn-login{
+  padding: 0 10px;
+  color: #fff;
+  height: 35px;
+  background-color: transparent;
+  
+}
+.btn-login:hover{
+  border: 2px solid #626ee3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.btn-primary:hover{
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 50%);
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.btn-secondary:hover{
+  transition: all .2s ease-in-out;
+  /* transition: background-color .2s,color .2s; */
+  background-color:var(--heading);
+  color:var(--white);
+}
+.btn-ternary:hover{
+  box-shadow: 0 2px 4px rgb(50 50 93 / 10%);
+
+  cursor: pointer;
+}
+
+.container{
+  /* margin: 20px; */
+}
+.container-mbt-30{
+  margin:30px 30px;
+}
+.container-dark{
+  background:linear-gradient(-90deg, #02203c, #001528);
+}
+.container-dark-alt{
+  background-color: #02203c;
+}
+
+.container-white{
+  background-color: var(--white);
+}
+
+
+.logo{
+  font-family: "Jura","Helvetica","Arial",sans-serif;
+  color: var(--white);
+  margin:0;
+  font-size: 36px;
+  line-height: 1;
+}
+.logo-text{
+color:var(--logo-text);
+font-size:18px;
+font-family: "Jura","Helvetica","Arial",sans-serif;
+font-weight:600;
+margin: 10px 0px;
+}
+.logo-asset{
+  /* transform: rotate(404deg); */
+  max-width: 35px;
+  width: 100%;
+  margin:0 15px 0 0;
+  height:40px;
+}
+/* custom global */
+
+/* custom css */
+.nav{
+  padding:20px 20px;
+  justify-content:space-between;
+}
+.nav-links{
+  font-size:14px;
+  font-family: "Open Sans","Helvetica","Arial",sans-serif;
+  padding:0 15px;
+  list-style: none;
+}
+.nav-links a{
+  text-decoration: none;
+
+  color:var(--white);
+}
+
+.logo-wrapper {
+  /* background-color:blue; */
+}
+.nav-link-wrapper{
+  /* background-color:gray; */
+  width:600px;
+  display: flex;
+  justify-content:flex-start;
+}
+.login-wrapper{
+  /* background-color:crimson; */
+  width:150px;
+}
+
+
+/* custom css */
+
+
+
+
+@media screen and (min-width:320px) and (max-width:468px){
+  h1{
+    font-size:20px;
   }
+  .heading-text-h2{
+    font-size:30px;
+  }
+  .head-subtext-p{
+    font-size:16px;
+  }
+  .container-mbt-30{
+    margin:30px 20px;
+  }
+  .logo{
+    font-size: 20px;
+
+  }
+  .logo-asset{
+
+    height:20px;
+    width:20px;
+  }
+  .logo-text{
+    font-size:12px;
+    text-align:center;
+    }
+    .mob-icon-div{
+      width: 75px;
+    }
+    .mob-icon{
+    height: 30px;
+    color: #fff;
+    transition: color .2s;
+    }
+    .nav{
+      padding:15px 10px;
+    }
+    .login-wrapper{
+      width:70px;
+    }
+
+  .navlinks-wrapper{
+    display:none;
+
+  }
+  .banner-heading{
+    font-size: 38px;
+  }
+
+  .inner-container{
+    text-align: center;
+  }
+.banner-text{
+  line-height:1.7;
+  padding: 0 18px;
+}
+.btn-banner{
+  margin:0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* features */
+.container-feature{
+  padding:100px 10px;
+}
+.feature-head{
+  font-size: 30px;
+
+}
+
+/* tabular */
+
+.tabular-container{
+  overflow:auto;
+}
+
+/* customers */
+.customers-container{
+  margin:200px 20px;
+}
+.customers-head{
+  padding:30px 15px;
+}
+.head-subtext-p{
+  font-size:18px;
+
+}
+
+/* testimonial*/
+.slider-wrapper{
+  margin:00px;
+}
+.user-text{
+
+  /* width:200px; */
+}
+
+/* categories */
+.inner-container{
+  padding:60px 25px;
+}
+.inner-container h2{
+  font-size:30px;
+}
+.category-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+.category-card{
+  height:80px;
+  width:270px;
+}
+.category-card-front{
+  display:flex;
+  flex-direction: row-reverse;
+  justify-content:space-between;
+  padding:10px 20px;
+}
+/* video */
+.left-chapters-div,.video-chapters-wrapper,.video-container{
+  display:flex;
+  flex-direction:column;
+  text-align: center;
+}
+.left-chapters-div{
+  flex: 1 1 50%;
+ margin-right:0px;
+}
+.video-block{
+  flex: 1 1 20%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  
+}
+.iframe{
+  width: 100%;
+  height: 20%;
 }
 
-.App-link {
-  color: #61dafb;
+/* dsa */
+.dsa-container{
+  padding:0px 0px;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-image-div{
+  margin:60px 0;
+}
+.left-image{
+
+  width: 280px;
+  right: 0;
+  transform: none;
+  
+
+}
+.right-text-div{
+  padding:0;
+  text-align:center;
+}
+.centerd-btn-mob{
+  margin:10px auto;
+
+}
+
 }
